# rag-ruslit-homework

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml
app/: __init__.py  chunker.py  config.py  generator.py  ingest.py  main.py  retriever.py
data/raw/: datasets.json
doc/: 00_project_idea.md  DATA.md  conventions.md  tasklist.md  vision.md  workflow.md
homework/: SUBMISSION.md
homework/00_planning/: README.md  step_01_project_idea.md  step_02_vision.md  step_03_conventions.md  step_04_tasklist.md  step_05_workflow.md
homework/01_implementation/: README.md  iter_00_scaffold.md  iter_01_demo_data.md  iter_02_ingestion.md  iter_03_chunking.md  iter_04_index.md  iter_05_retrieval.md  iter_06_demo_answer.md  iter_07_streamlit_ui.md  iter_08_tests_readme.md
scripts/: build_index.py  check_generator.py  check_retrieval.py  prepare_datasets.py
tests/: test_chunking.py  test_dataset_contract.py  test_generator.py  test_ingest.py  test_retriever.py
