[project]
name = "rag-gutenberg-homework"
version = "0.1.0"
description = "Educational RAG over Project Gutenberg public-domain texts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pytest",
    "scikit-learn",
    "scipy",
    "streamlit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
