[project]
name = "rag-ruslit-homework"
version = "0.1.0"
description = "Educational Russian-language RAG over RusLit public-domain texts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pytest",
    "scikit-learn",
    "scipy",
    "streamlit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
